test/lambda/negative/semantic/type_mismatch.ls
// @expect-error: E203
// @description: Type mismatch - string used as number

let x = "hello" + 5
let y = x * 2
